Replace product descriptions with 'PRECIO MEXIQUENSE'

--- a/index.html
+++ b/index.html
@@ -1993,7 +1993,7 @@
           <div class="mexiquense-card__body">
             <span class="mexiquense-card__tag">$1.99</span>
             <h3>Huevo Best Choice 12 pack</h3>
-            <p>Docena fresca para desayunos llenos de energía.</p>
+            <p>PRECIO MEXIQUENSE</p>
             <div class="mexiquense-card__price" aria-label="Precio: $1.99">
               <span class="mexiquense-card__amount">$1.99</span>
             </div>
@@ -2008,7 +2008,7 @@
           <div class="mexiquense-card__body">
             <span class="mexiquense-card__tag">$4.69</span>
             <h3>Gallon de Leche Prairie Farms</h3>
-            <p>Suave y cremosa, perfecta para tus licuados matutinos.</p>
+ <p>PRECIO MEXIQUENSE</p>
             <div class="mexiquense-card__price" aria-label="Precio: $4.69">
               <span class="mexiquense-card__amount">$4.69</span>
             </div>
@@ -2023,7 +2023,7 @@
           <div class="mexiquense-card__body">
             <span class="mexiquense-card__tag">$1.99</span>
             <h3>Jugo Tampico</h3>
-            <p>El ponche cítrico de Tampico ofrece una combinación de sabores de naranja, mandarina y limón.</p>
+             <p>PRECIO MEXIQUENSE</p>
             <div class="mexiquense-card__price" aria-label="Precio: $1.99">
               <span class="mexiquense-card__amount">$1.99</span>
             </div>
@@ -2038,7 +2038,7 @@
           <div class="mexiquense-card__body">
             <span class="mexiquense-card__tag">$4.99</span>
             <h3>Harina Pan 5 LB</h3>
-            <p>Ideal para Arepas</p>
+            <p>PRECIO MEXIQUENSE</p>
             <div class="mexiquense-card__price" aria-label="Precio: $4.99">
               <span class="mexiquense-card__amount">$4.99</span>
             </div>
@@ -2053,7 +2053,7 @@
           <div class="mexiquense-card__body">
             <span class="mexiquense-card__tag">$3.99</span>
             <h3>Maseca 5 LB</h3>
-            <p>Regular, Tamal y Nixta Masa</p>
+          <p>PRECIO MEXIQUENSE</p>
             <div class="mexiquense-card__price" aria-label="Precio: $1.89">
               <span class="mexiquense-card__amount">$3.99</span>
             </div>
@@ -2068,7 +2068,7 @@
           <div class="mexiquense-card__body">
             <span class="mexiquense-card__tag">2x6</span>
             <h3>Frijol Goya</h3>
-            <p>Pintos y Negros 40 Oz.</p>
+           <p>PRECIO MEXIQUENSE</p>
             <div class="mexiquense-card__price" aria-label="Precio: 2x6">
               <span class="mexiquense-card__amount">2x6</span>
             </div>
@@ -2083,7 +2083,7 @@
           <div class="mexiquense-card__body">
             <span class="mexiquense-card__tag">$4.99</span>
             <h3>Aceite Mazola 32 oz</h3>
-            <p>Ligero y rendidor para tus recetas fritas y horneadas.</p>
+          <p>PRECIO MEXIQUENSE</p>
             <div class="mexiquense-card__price" aria-label="Precio: $4.99">
               <span class="mexiquense-card__amount">$4.99</span>
             </div>
@@ -2098,7 +2098,7 @@
           <div class="mexiquense-card__body">
             <span class="mexiquense-card__tag">$6.99</span>
             <h3>Coca Cola 12 Pack Cans</h3>
-            <p>Refresco Coca-Cola Sabor Original, 12 latas de 355 ml c/u.</p>
+           <p>PRECIO MEXIQUENSE</p>
             <div class="mexiquense-card__price" aria-label="Precio: $6.99">
               <span class="mexiquense-card__amount">$6.99</span>
             </div>
@@ -2113,7 +2113,7 @@
           <div class="mexiquense-card__body">
             <span class="mexiquense-card__tag">$2.79</span>
             <h3>Nutri Leche 32 Oz</h3>
-            <p>Cremosa y ligera para el día día.</p>
+             <p>PRECIO MEXIQUENSE</p>
             <div class="mexiquense-card__price" aria-label="Precio: $2.79">
               <span class="mexiquense-card__amount">$2.79</span>
             </div>
@@ -2128,7 +2128,7 @@
           <div class="mexiquense-card__body">
             <span class="mexiquense-card__tag">$4.49</span>
             <h3>Chuleta Ahumada</h3>
-            <p>Por libra.</p>
+          <p>PRECIO MEXIQUENSE</p>
             <div class="mexiquense-card__price" aria-label="Precio: $4.49">
               <span class="mexiquense-card__amount">$4.49</span>
             </div>
@@ -2143,7 +2143,7 @@
           <div class="mexiquense-card__body">
             <span class="mexiquense-card__tag">$7.99</span>
             <h3>Nescafé Clásico 7.9 Oz</h3>
-            <p>Aroma especiado para iniciar el día con calidez.</p>
+         <p>PRECIO MEXIQUENSE</p>
             <div class="mexiquense-card__price" aria-label="Precio: $7.99">
               <span class="mexiquense-card__amount">$7.99</span>
             </div>
