Update product names in index.html

--- a/index.html
+++ b/index.html
@@ -2067,7 +2067,7 @@
           </figure>
           <div class="mexiquense-card__body">
             <span class="mexiquense-card__tag">2x6</span>
-            <h3>Frijol Goya</h3>
+            <h3>Frijol Goya 40 OZ</h3>
            <p>PRECIO MEXIQUENSE</p>
             <div class="mexiquense-card__price" aria-label="Precio: 2x6">
               <span class="mexiquense-card__amount">2x6</span>
@@ -2097,7 +2097,7 @@
           </figure>
           <div class="mexiquense-card__body">
             <span class="mexiquense-card__tag">$6.99</span>
-            <h3>Coca Cola 12 Pack Cans</h3>
+            <h3>Coca Cola 12 Pack</h3>
            <p>PRECIO MEXIQUENSE</p>
             <div class="mexiquense-card__price" aria-label="Precio: $6.99">
               <span class="mexiquense-card__amount">$6.99</span>
@@ -2142,10 +2142,9 @@
           </figure>
           <div class="mexiquense-card__body">
             <span class="mexiquense-card__tag">$7.99</span>
-            <h3>Nescafé Clásico 7.9 Oz</h3>
+            <h3>Nescafé 7.9 Oz</h3>
          <p>PRECIO MEXIQUENSE</p>
             <div class="mexiquense-card__price" aria-label="Precio: $7.99">
-              <span class="mexiquense-card__amount">$7.99</span>
             </div>
           </div>
         </article>
