Update price tags from '2x6' to '2x$6'

--- a/index.html
+++ b/index.html
@@ -2261,11 +2261,11 @@
             <img src="frijolgoya.png" alt="Lata de frijoles negros Goya 40 oz" loading="lazy">
           </figure>
           <div class="mexiquense-card__body">
-            <span class="mexiquense-card__tag">2x6</span>
+            <span class="mexiquense-card__tag">2x$6</span>
             <h3>Frijol Goya 40 OZ</h3>
             <a href="#" class="btn-shine">PRECIO MEXIQUENSE</a>
             <div class="mexiquense-card__price" aria-label="Precio: 2x6">
-              <span class="mexiquense-card__amount">2x6</span>
+              <span class="mexiquense-card__amount">2x$6</span>
             </div>
           </div>
         </article>
