--- a/index.html
+++ b/index.html
@@ -1988,13 +1988,13 @@
 
   <!-- ===== SECCIONES DEMO ===== -->
   <section id="productos" class="section">
-    <h2 class="section-title">MIERCOLAZO DE DESCUENTO %</h2>
-    <p class="muted">Promos que se renuevan todos los miércoles..</p>
+    <h2 class="section-title">SEMANITA DEL AHORRO %</h2>
+    <p class="muted">Promos que se renuevan todas las semanas</p>
     <div class="product-carousel" role="list">
       <article class="product-card" role="listitem">
-        <span class="offer-badge" aria-live="polite"><span>Coca Cola</span></span>
+        <span class="offer-badge" aria-live="polite"><span>Chocolate Abuelita 19 Oz</span></span>
         <div class="product-media" aria-hidden="true">
-          <img src="https://http2.mlstatic.com/D_Q_NP_907439-MLA95742758928_102025-O.webp" alt="Paquete de harina P.A.N." loading="lazy">
+          <img src="https://http2.mlstatic.com/D_NQ_NP_2X_713459-MLM71337239885_082023-F.webp" alt="Paquete de harina P.A.N." loading="lazy">
         </div>
         <div class="product-body">
           <h3 class="product-title">Coca Cola 12 Pack Cans</h3>
