Update product details and prices in index.html

--- a/index.html
+++ b/index.html
@@ -2001,39 +2001,39 @@
           <div class="price-stack" aria-label="Precio promocional de Harina P.A.N. Maíz Blanco">
             <span class="price-mixed">
               <span><span class="price-label">Antes:</span> <span>$9.99</span></span>
-              <span><span class="price-label price-label--now">Ahora:</span> <span class="price-current">$6.99</span></span>
+              <span><span class="price-label price-label--now">Ahora:</span> <span class="price-current">$7.99</span></span>
             </span>
           </div>
         </div>
       </article>
 
       <article class="product-card" role="listitem">
-        <span class="offer-badge" aria-live="polite"><span>Jarritos 12 Oz Bottle</span></span>
+        <span class="offer-badge" aria-live="polite"><span>Chocolate Abuelita 19 Oz</span></span>
         <div class="product-media" aria-hidden="true">
-          <img src="https://www.jarritos.nz/cdn/shop/files/Jarritos_Family_600x600@2x.png?v=1614294863" alt="Harina de maíz Maseca" loading="lazy">
+          <img src="https://http2.mlstatic.com/D_NQ_NP_2X_713459-MLM71337239885_082023-F.webp" alt="Harina de maíz Maseca" loading="lazy">
         </div>
         <div class="product-body">
-          <h3 class="product-title">Jarritos 12 Oz</h3>
+          <h3 class="product-title">Chocolate Abuelita 19 oz</h3>
           <div class="price-stack" aria-label="Precio promocional de Maseca Maíz Instantáneo">
             <span class="price-mixed">
-              <span><span class="price-label">Antes:</span> <span>$1.59</span></span>
-              <span><span class="price-label price-label--now">Ahora:</span> <span class="price-current">$.99</span></span>
+              <span><span class="price-label">Antes:</span> <span>$6.99</span></span>
+              <span><span class="price-label price-label--now">Ahora:</span> <span class="price-current">$4.99</span></span>
             </span>
           </div>
         </div>
       </article>
 
       <article class="product-card" role="listitem">
-        <span class="offer-badge" aria-live="polite"><span>Jugo de la Granja Gallon</span></span>
+        <span class="offer-badge" aria-live="polite"><span>Raptor botella Plástico</span></span>
         <div class="product-media" aria-hidden="true">
-          <img src="https://www.nicepng.com/png/detail/97-979978_3400-ml-jugo-de-la-granja.png" alt="Granja" loading="lazy">
+          <img src="https://www.trianglequalityfoods.com/images/productos/bebida-energizante-botella-154959-155009.jpg" alt="Granja" loading="lazy">
         </div>
         <div class="product-body">
-          <h3 class="product-title">Jugo De La Granja</h3>
+          <h3 class="product-title">Raptor Energy</h3>
           <div class="price-stack" aria-label="Precio promocional de Frijoles Negros Listos">
             <span class="price-mixed">
-              <span><span class="price-label">Antes:</span> <span>$10.79</span></span>
-              <span><span class="price-label price-label--now">Ahora:</span> <span class="price-current">$6.79</span></span>
+              <span><span class="price-label">Antes:</span> <span>$2.29</span></span>
+              <span><span class="price-label price-label--now">Ahora:</span> <span class="price-current">$1.49</span></span>
             </span>
           </div>
         </div>
