Update product details and promotional date
Updated product titles, images, and prices in the product cards. Modified promotional date for the offers.

--- a/index.html
+++ b/index.html
@@ -1997,11 +1997,11 @@
           <img src="https://http2.mlstatic.com/D_NQ_NP_2X_713459-MLM71337239885_082023-F.webp" alt="Paquete de harina P.A.N." loading="lazy">
         </div>
         <div class="product-body">
-          <h3 class="product-title">Coca Cola 12 Pack Cans</h3>
+          <h3 class="product-title">Manzelazo</h3>
           <div class="price-stack" aria-label="Precio promocional de Harina P.A.N. Maíz Blanco">
             <span class="price-mixed">
-              <span><span class="price-label">Antes:</span> <span>$9.99</span></span>
-              <span><span class="price-label price-label--now">Ahora:</span> <span class="price-current">$7.99</span></span>
+              <span><span class="price-label">Antes:</span> <span>$11.99</span></span>
+              <span><span class="price-label price-label--now">Ahora:</span> <span class="price-current">$9.99</span></span>
             </span>
           </div>
         </div>
@@ -2026,7 +2026,7 @@
       <article class="product-card" role="listitem">
         <span class="offer-badge" aria-live="polite"><span>Raptor botella Plástico</span></span>
         <div class="product-media" aria-hidden="true">
-          <img src="https://www.trianglequalityfoods.com/images/productos/bebida-energizante-botella-154959-155009.jpg" alt="Granja" loading="lazy">
+          <img src="https://stage.tunicaragua.com/images/stories/virtuemart/product/Sin%20t%C3%ADtulo(3)7.png" alt="Granja" loading="lazy">
         </div>
         <div class="product-body">
           <h3 class="product-title">Raptor Energy</h3>
@@ -2040,16 +2040,16 @@
       </article>
 
       <article class="product-card" role="listitem">
-        <span class="offer-badge" aria-live="polite"><span>Limón</span></span>
+        <span class="offer-badge" aria-live="polite"><span>Pierna y Muslo</span></span>
         <div class="product-media" aria-hidden="true">
-          <img src="https://images.pexels.com/photos/161573/background-water-breakfast-bright-161573.jpeg" alt="limones" loading="lazy">
+          <img src="https://www.dspc.cloud/web/image/product.template/240/image_512?unique=bedbf9c" alt="limones" loading="lazy">
         </div>
         <div class="product-body">
-          <h3 class="product-title">Limón</h3>
+          <h3 class="product-title">Pierna y Múslo</h3>
           <div class="price-stack" aria-label="Precio promocional de Salsa Picante Artesanal">
             <span class="price-mixed">
-              <span><span class="price-label">Antes:</span> <span>$5x1</span></span>
-              <span><span class="price-label price-label--now">Ahora:</span> <span class="price-current">$10x1</span></span>
+              <span><span class="price-label">Antes:</span> <span>$2.29</span></span>
+              <span><span class="price-label price-label--now">Ahora:</span> <span class="price-current">$.99</span></span>
             </span>
           </div>
         </div>
@@ -2058,14 +2058,14 @@
       <article class="product-card" role="listitem">
         <span class="offer-badge" aria-live="polite"><span>Arrachera</span></span>
         <div class="product-media" aria-hidden="true">
-          <img src="https://sigmafoodservice.com/medias/-1200Wx1200H-70505145.jpg-515Wx515H?context=bWFzdGVyfGltYWdlc3wxMzU2Njh8aW1hZ2UvcG5nfGFXMWhaMlZ6TDJoalpDOW9NR012T1RJNE9UZzRNRFF3TXprNU9DNXdibWN8ZDYzZjM4OTYyNGVhNzI3NWM0NGVkMTg0NGE2Y2M2NTBmZDM0OTFhZmZkMmI4YTA4ZTkxZjBlNmI2NTljNDI1Yg" alt="CARNE" loading="lazy">
+          <img src="https://www.instacart.com/assets/domains/product-image/file/large_c32cd1d7-dcac-4298-9852-4625b80b6610.png" alt="CARNE" loading="lazy">
         </div>
         <div class="product-body">
-          <h3 class="product-title">Arrachera</h3>
+          <h3 class="product-title">Always Save Vegetable Oil 48 oz</h3>
           <div class="price-stack" aria-label="Precio promocional de Queso Fresco Artesanal">
             <span class="price-mixed">
-              <span><span class="price-label">Antes:</span> <span>$10.99</span></span>
-              <span><span class="price-label price-label--now">Ahora:</span> <span class="price-current">$8.99</span></span>
+              <span><span class="price-label">Antes:</span> <span>$5.99</span></span>
+              <span><span class="price-label price-label--now">Ahora:</span> <span class="price-current">$3.59</span></span>
             </span>
           </div>
         </div>
@@ -2081,7 +2081,7 @@
           <div class="price-stack" aria-label="Precio promocional de Chiles Poblanos Frescos">
             <span class="price-mixed">
               <span><span class="price-label">Antes:</span> <span>$1.29</span></span>
-              <span><span class="price-label price-label--now">Ahora:</span> <span class="price-current">$.79</span></span>
+              <span><span class="price-label price-label--now">Ahora:</span> <span class="price-current">$.99</span></span>
             </span>
           </div>
         </div>
@@ -2107,7 +2107,7 @@
       <span class="countdown-label" data-timer-label>Termina en</span>
       <span class="timer countdown-timer" role="timer">--:--:--</span>
     </p>
-    <p class="muted" id="promo-date">Promociones válidas solo el día Miércoles 12 Noviembre</p>
+    <p class="muted" id="promo-date">Promociones válidas solo del día Miércoles 14 Enero al Sábado 17 de Enero</p>
   </section>
 
   <section id="recetas" class="recipes-hero" aria-labelledby="recetas-title">
