Update product image source in index.html

--- a/index.html
+++ b/index.html
@@ -1994,7 +1994,7 @@
       <article class="product-card" role="listitem">
         <span class="offer-badge" aria-live="polite"><span>Chocolate Abuelita 19 Oz</span></span>
         <div class="product-media" aria-hidden="true">
-          <img src="https://http2.mlstatic.com/D_NQ_NP_2X_713459-MLM71337239885_082023-F.webp" alt="Paquete de harina P.A.N." loading="lazy">
+          <img src="https://valentinadistributors.com/cdn/shop/files/1400.jpg?v=1745380902&width=576" alt="Paquete de harina P.A.N." loading="lazy">
         </div>
         <div class="product-body">
           <h3 class="product-title">Manzelazo</h3>
