--- a/index.html
+++ b/index.html
@@ -2277,11 +2277,11 @@
             <img src="https://www.instacart.com/image-server/1200x1200/www.instacart.com/assets/domains/product-image/file/large_6a930469-dbc4-44d6-92ea-331416ff4953.jpeg" alt="Docena de huevos frescos" loading="lazy">
           </figure>
           <div class="mexiquense-card__body">
-            <span class="mexiquense-card__tag">$1.99</span>
+            <span class="mexiquense-card__tag">$2.49</span>
             <h3>Huevo Best Choice 12 pack</h3>
             <a href="#" class="btn-shine">PRECIO MEXIQUENSE</a>
             <div class="mexiquense-card__price" aria-label="Precio: $1.99">
-              <span class="mexiquense-card__amount">$1.99</span>
+              <span class="mexiquense-card__amount">$2.49</span>
             </div>
           </div>
         </article>
@@ -2292,11 +2292,11 @@
             <img src="https://i5.walmartimages.com/asr/c0d2f31c-08a1-4b4b-8a4a-204d8b010646.4cd43d99d75562863fb93014fdcccc8b.png?odnHeight=768&odnWidth=768&odnBg=FFFFFF" alt="Botellas de leche sobre una mesa" loading="lazy">
           </figure>
           <div class="mexiquense-card__body">
-            <span class="mexiquense-card__tag">$4.69</span>
+            <span class="mexiquense-card__tag">$4.99</span>
             <h3>Gallon de Leche Prairie Farms</h3>
             <a href="#" class="btn-shine">PRECIO MEXIQUENSE</a>
             <div class="mexiquense-card__price" aria-label="Precio: $4.69">
-              <span class="mexiquense-card__amount">$4.69</span>
+              <span class="mexiquense-card__amount">$4.99</span>
             </div>
           </div>
         </article>
@@ -2351,11 +2351,11 @@
           <article class="mexiquense-card" role="listitem">
           <figure class="mexiquense-card__media">
             <!-- SEO: Alt tag optimizado con marca y ubicación -->
-          <img src="masecas.png" alt="Harina Maseca 4 libras - tortillas frescas supermercado mexicano St Charles Missouri" loading="lazy">
+          <img src="https://m.media-amazon.com/images/I/719Sq9TmRyL.jpg" alt="Harina Maseca 4 libras - tortillas frescas supermercado mexicano St Charles Missouri" loading="lazy">
           </figure>
           <div class="mexiquense-card__body">
             <span class="mexiquense-card__tag">$3.99</span>
-            <h3>Masecas 4 LB</h3>
+            <h3>Maseca 4 LB</h3>
             <a href="#" class="btn-shine">PRECIO MEXIQUENSE</a>
             <div class="mexiquense-card__price" aria-label="Precio: $3.99">
               <span class="mexiquense-card__amount">$3.99</span>
@@ -2384,11 +2384,11 @@
             <img src="https://latorremx.vtexassets.com/arquivos/ids/165625/41281-frontal.jpg?v=637691351591400000" alt="Botella de aceite vegetal" loading="lazy">
           </figure>
           <div class="mexiquense-card__body">
-            <span class="mexiquense-card__tag">$4.99</span>
+            <span class="mexiquense-card__tag">$6.99</span>
             <h3>Aceite Mazola 32 oz</h3>
             <a href="#" class="btn-shine">PRECIO MEXIQUENSE</a>
             <div class="mexiquense-card__price" aria-label="Precio: $4.99">
-              <span class="mexiquense-card__amount">$4.99</span>
+              <span class="mexiquense-card__amount">$6.99</span>
             </div>
           </div>
         </article>
@@ -2399,11 +2399,11 @@
             <img src="https://punto929.mx/cdn/shop/products/Coca_Cola_Original.jpg?v=1597039859" alt="Queso fresco cortado sobre tabla" loading="lazy">
           </figure>
           <div class="mexiquense-card__body">
-            <span class="mexiquense-card__tag">$7.99</span>
+            <span class="mexiquense-card__tag">$8.99</span>
             <h3>Coca Cola 12 Pack</h3>
             <a href="#" class="btn-shine">PRECIO MEXIQUENSE</a>
             <div class="mexiquense-card__price" aria-label="Precio: $6.99">
-              <span class="mexiquense-card__amount">$7.99</span>
+              <span class="mexiquense-card__amount">$8.99</span>
             </div>
           </div>
         </article>
@@ -2414,11 +2414,11 @@
             <img src="https://www.subodega.mx/articulo/922/03.webp" alt="Mutri Leche" loading="lazy">
           </figure>
           <div class="mexiquense-card__body">
-            <span class="mexiquense-card__tag">$2.79</span>
+            <span class="mexiquense-card__tag">$2.99</span>
             <h3>Nutri Leche 32 Oz</h3>
             <a href="#" class="btn-shine">PRECIO MEXIQUENSE</a>
             <div class="mexiquense-card__price" aria-label="Precio: $2.79">
-              <span class="mexiquense-card__amount">$2.79</span>
+              <span class="mexiquense-card__amount">$2.99</span>
             </div>
           </div>
         </article>
@@ -2444,10 +2444,10 @@
             <img src="https://www.instacart.com/image-server/600x600/filters:fill(FFFFFF,true):format(jpg)/d2lnr5mha7bycj.cloudfront.net/product-image/file/large_2bd25f2e-72bc-43b4-8448-5c84410a517e.jpg" alt="Taza de café de olla humeante" loading="lazy">
           </figure>
           <div class="mexiquense-card__body">
-            <span class="mexiquense-card__tag">$7.99</span>
+            <span class="mexiquense-card__tag">$8.99</span>
             <h3>Nescafé 7.9 Oz</h3>
             <a href="#" class="btn-shine">PRECIO MEXIQUENSE</a>
-            <div class="mexiquense-card__price" aria-label="Precio: $7.99">
+            <div class="mexiquense-card__price" aria-label="Precio: $8.99">
             </div>
           </div>
         </article>
